[tool.poetry]
name = "botifyme"
version = "0.1.0"
description = "Toolkit for building Autonomous AI agents"
authors = ["Arun Reddy <arunreddy.nelakurthi@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
